--- a/geostats/src/main/res/values/recordsCurrents.xml
+++ b/geostats/src/main/res/values/recordsCurrents.xml
@@ -3,27 +3,27 @@
 <!-- source: GEOGRAFICKE TABULKY -->
 
 <resources>
-    <string name="GulfStreamFlowRate">80.000.000 sq m/s</string>
-    <string name="BenguelaCurrentFlowRate">15.000.000 sq m/s</string>
-    <string name="KuroshioCurrentFlowRate">50.000.000 sq m/s</string>
-    <string name="OyashioCurrentFlowRate">7.000.000 sq m/s</string>
-    <string name="HumboldtCurrentFlowRate">20.000.000 sq m/s</string>
-    <string name="MozambiqueCurrentFlowRate">20.000.000 sq m/s</string>
-    <string name="LabradorCurrentFlowRate">6.000.000 sq m/s</string>
+    <string name="GulfStreamFlowRate">80.000.000 sq</string>
+    <string name="BenguelaCurrentFlowRate">15.000.000 sq</string>
+    <string name="KuroshioCurrentFlowRate">50.000.000 sq</string>
+    <string name="OyashioCurrentFlowRate">7.000.000 sq</string>
+    <string name="HumboldtCurrentFlowRate">20.000.000 sq</string>
+    <string name="MozambiqueCurrentFlowRate">20.000.000 sq</string>
+    <string name="LabradorCurrentFlowRate">6.000.000 sq</string>
     
-    <string name="GulfStreamWidth">up to 200 km</string>
-    <string name="BenguelaCurrentWidth">up to 500 km</string>
-    <string name="KuroshioCurrentWidth">up to 100 km</string>
-    <string name="OyashioCurrentWidth">up to 100 km</string>
-    <string name="HumboldtCurrentWidth">up to 1000 km</string>
-    <string name="MozambiqueCurrentWidth">up to 100 km</string>
-    <string name="LabradorCurrentWidth">up to 100 km</string>
+    <string name="GulfStreamWidth">up to 200</string>
+    <string name="BenguelaCurrentWidth">up to 500</string>
+    <string name="KuroshioCurrentWidth">up to 100</string>
+    <string name="OyashioCurrentWidth">up to 100</string>
+    <string name="HumboldtCurrentWidth">up to 1000</string>
+    <string name="MozambiqueCurrentWidth">up to 100</string>
+    <string name="LabradorCurrentWidth">up to 100</string>
     
-    <string name="GulfStreamSpeed">80&#8211;100 cm/s</string>
-    <string name="BenguelaCurrentSpeed">25 cm/s</string>
-    <string name="KuroshioCurrentSpeed">up to 200 cm/s</string>
-    <string name="OyashioCurrentSpeed">50 cm/s</string>
-    <string name="HumboldtCurrentSpeed">20&#8211;60 cm/s</string>
-    <string name="MozambiqueCurrentSpeed">20 cm/s</string>
-    <string name="LabradorCurrentSpeed">25 cm/s</string>
+    <string name="GulfStreamSpeed">80&#8211;100</string>
+    <string name="BenguelaCurrentSpeed">25</string>
+    <string name="KuroshioCurrentSpeed">up to 200</string>
+    <string name="OyashioCurrentSpeed">50</string>
+    <string name="HumboldtCurrentSpeed">20&#8211;60</string>
+    <string name="MozambiqueCurrentSpeed">20</string>
+    <string name="LabradorCurrentSpeed">25</string>
 </resources>
