--- a/geostats/src/main/res/layout/inc_asia_urban_areas.xml
+++ b/geostats/src/main/res/layout/inc_asia_urban_areas.xml
@@ -15,7 +15,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	        <TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/TokyoYokohama"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -26,7 +26,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	       <TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/JakartaJabotabek"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -37,7 +37,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	       	<TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/SeoulIncheon"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -48,7 +48,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	        <TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/Dehli"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -59,7 +59,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	        <TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/Shanghai"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -70,7 +70,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 			<TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/Manila"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -81,7 +81,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 			<TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/Karachi"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -92,7 +92,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	        <TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/Beijing"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -103,7 +103,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
  			<TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/GuangzhouFoshan"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -114,7 +114,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	        <TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/Mumbai"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
