--- a/geostats/src/main/res/layout/inc_oceania_cities.xml
+++ b/geostats/src/main/res/layout/inc_oceania_cities.xml
@@ -16,7 +16,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/CityOfBrisbane"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -34,7 +34,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/GoldCoastCity"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -52,7 +52,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/MoretonBayRegion"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -70,7 +70,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/SunshineCoastRegion"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -88,7 +88,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/CityOfBlacktown"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -106,7 +106,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/LoganCity"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -124,7 +124,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/CityOfCasey"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -142,7 +142,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/CityOfGreaterGeelong"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -160,7 +160,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/SutherlandShire"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -178,7 +178,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/CityOfStirling"/>
 		   			</TableRow>
 		   			<TableRow>
