--- a/geostats/src/main/res/layout/inc_samerica_urban_areas.xml
+++ b/geostats/src/main/res/layout/inc_samerica_urban_areas.xml
@@ -15,7 +15,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	        <TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/SaoPaulo"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -26,7 +26,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	       <TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/BuenosAires"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -37,7 +37,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	       	<TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/RiodeJaneiro"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -48,7 +48,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	        <TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/Lima"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -59,7 +59,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	        <TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/Bogota"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -70,7 +70,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 			<TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/Santiago"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -81,7 +81,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 			<TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/BeloHorizonte"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -92,7 +92,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	        <TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/Salvador"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -103,7 +103,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
  			<TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/PortoAlegre"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
@@ -114,7 +114,7 @@
 	    </TableRow>
 	    <TableRow style="@style/TableRow">
 	        <TextView 
-	          	style="@style/TableTextView.PadddingBottom0"
+	          	style="@style/TableTextView.PaddingBottom0"
 	            android:text="@string/Recife"/>
 		    <TextView 
 	          	style="@style/TableTextView.GravityRight"
