--- a/geostats/src/main/res/layout/vp_world_deepest_lakes.xml
+++ b/geostats/src/main/res/layout/vp_world_deepest_lakes.xml
@@ -29,7 +29,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/LakeBaikal"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -47,7 +47,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/LakeTanganyika"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -63,7 +63,7 @@
 		    </TableRow>
 		    <TableRow style="@style/TableRow">
 		         <TextView 
-		          	style="@style/TableTextView.PadddingBottom0"
+		          	style="@style/TableTextView.PaddingBottom0"
 		            android:text="@string/CaspianSea"/>
 			    <TextView 
 		          	style="@style/TableTextView.GravityRight"
@@ -74,7 +74,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/LakeVostok"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -92,7 +92,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/OHigginsSanMartin"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -110,7 +110,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/LakeNyasa"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -128,7 +128,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/Ysykkol"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -146,7 +146,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/GreatSlaveLake"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -164,7 +164,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/CraterLake"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -182,7 +182,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/LakeMatano"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -200,7 +200,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/GeneralCarreraLake"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -218,7 +218,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/Hornindalsvatnet"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -236,7 +236,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/QuesnelLake"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -254,7 +254,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/LakeToba"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -272,7 +272,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/SarezLake"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -290,7 +290,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/LakeTahoe"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -308,7 +308,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/ArgentinoLake"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -326,7 +326,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/LakeKivu"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -344,7 +344,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/Mjosa"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -362,7 +362,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/LakeChelan"/>
 		   			</TableRow>
 		   			<TableRow>
