--- a/geostats/src/main/res/layout/vp_world_salt.xml
+++ b/geostats/src/main/res/layout/vp_world_salt.xml
@@ -26,7 +26,7 @@
 		    
 		    <TableRow style="@style/TableRow">
 		        <TextView 
-		          	style="@style/TableTextView.PadddingBottom0"
+		          	style="@style/TableTextView.PaddingBottom0"
 		            android:text="@string/China"/>
 			    <TextView 
 		          	style="@style/TableTextView.GravityRight"
@@ -37,7 +37,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/USA"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -55,7 +55,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/India"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -73,7 +73,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/USA"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -91,7 +91,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/Canada"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -107,7 +107,7 @@
 		    </TableRow>
 		    <TableRow style="@style/TableRow">
 		        <TextView 
-		          	style="@style/TableTextView.PadddingBottom0"
+		          	style="@style/TableTextView.PaddingBottom0"
 		            android:text="@string/Australia"/>
 			    <TextView 
 		          	style="@style/TableTextView.GravityRight"
@@ -116,7 +116,7 @@
 		    </TableRow>
 		    <TableRow style="@style/TableRow">
 		        <TextView 
-		          	style="@style/TableTextView.PadddingBottom0"
+		          	style="@style/TableTextView.PaddingBottom0"
 		            android:text="@string/Chile"/>
 			    <TextView 
 		          	style="@style/TableTextView.GravityRight"
@@ -125,7 +125,7 @@
 		    </TableRow>
 		    <TableRow style="@style/TableRow">
 		        <TextView 
-		          	style="@style/TableTextView.PadddingBottom0"
+		          	style="@style/TableTextView.PaddingBottom0"
 		            android:text="@string/Mexico"/>
 			    <TextView 
 		          	style="@style/TableTextView.GravityRight"
@@ -136,7 +136,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/Germany"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -154,7 +154,7 @@
 		        <TableLayout android:stretchColumns="0">
 		            <TableRow>
 				        <TextView 
-				          	style="@style/TableTextView.PadddingBottom0"
+				          	style="@style/TableTextView.PaddingBottom0"
 				            android:text="@string/USA"/>
 		   			</TableRow>
 		   			<TableRow>
@@ -170,7 +170,7 @@
 		    </TableRow>
 		    <TableRow style="@style/TableRow">
 		        <TextView 
-		          	style="@style/TableTextView.PadddingBottom0"
+		          	style="@style/TableTextView.PaddingBottom0"
 		            android:text="@string/Netherlands"/>
 			    <TextView 
 		          	style="@style/TableTextView.GravityRight"
@@ -179,7 +179,7 @@
 		    </TableRow>
 		    <TableRow style="@style/TableRow">
 		        <TextView 
-		          	style="@style/TableTextView.PadddingBottom0"
+		          	style="@style/TableTextView.PaddingBottom0"
 		            android:text="@string/UnitedKingdom"/>
 			    <TextView 
 		          	style="@style/TableTextView.GravityRight"
